--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta http-equiv="Access-Control-Allow-Origin" content="*">
   <!-- <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="icon" href="<%- logo %>">
-  <link rel="apple-touch-icon" href="<%- appleLogo %>" />
+  <link rel="icon" href="/images/icon/cat.jpg">
+  <link rel="apple-touch-icon" href="/images/icon/头像.jpg" />
   <link rel="bookmark" href="<%- appleLogo %>" />
   <link rel="apple-touch-icon-precomposed" sizes="200x200" href="<%- appleLogo %>" />
   <meta name="description" content="<%- description %>" />
@@ -18,26 +18,27 @@
   <!-- HarmonyOS Sans -->
   <!-- 本站 CDN 已开启防盗链，非本站域名不可访问，请更改链接为下方内容，否则自定义字体将失效 -->
   <!-- https://s1.hdslb.com/bfs/static/jinkela/long/font/regular.css -->
-  <link rel="stylesheet" href="https://cdn.imsyy.top/gh/imsyy/file/font/HarmonyOS_Sans/regular.min.css" />
+  <!-- <link rel="stylesheet" href="https://cdn.imsyy.top/gh/imsyy/file/font/HarmonyOS_Sans/regular.min.css" /> -->
+  <link rel="stylesheet" href="https://s1.hdslb.com/bfs/static/jinkela/long/font/regular.css" />
   <link rel="stylesheet" href="/loading/loading.min.css">
   <!-- IE Out -->
   <script>
     if ( /*@cc_on!@*/ false || (!!window.MSInputMethodContext && !!document.documentMode))
       window.location.href =
-      "https://support.dmeng.net/upgrade-your-browser.html?referrer=" + encodeURIComponent(window.location.href)
+        "https://support.dmeng.net/upgrade-your-browser.html?referrer=" + encodeURIComponent(window.location.href)
   </script>
   <% if (tongji) { %>
-  <!-- 百度统计 -->
-  <script>
-    var _hmt = _hmt || [];
-    (function() {
-      var hm = document.createElement("script");
-      hm.src = "https://hm.baidu.com/hm.js?<%- tongji %>";
-      var s = document.getElementsByTagName("script")[0];
-      s.parentNode.insertBefore(hm, s);
-    })();
-  </script>
-  <% } %>
+    <!-- 百度统计 -->
+    <script>
+      var _hmt = _hmt || [];
+      (function () {
+        var hm = document.createElement("script");
+        hm.src = "https://hm.baidu.com/hm.js?<%- tongji %>";
+        var s = document.getElementsByTagName("script")[0];
+        s.parentNode.insertBefore(hm, s);
+      })();
+    </script>
+    <% } %>
 </head>
 
 <body class="loading">
